<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lxs.animationtest.MainActivity">

    <Button
        android:id="@+id/animation_tween"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tween_anim"/>

    <Button
        android:id="@+id/animation_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_anim"/>

    <Button
        android:id="@+id/animation_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_anim"/>

    <Button
        android:id="@+id/animation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_animation"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/animation_layout_java"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_animation_java"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/animation_activity_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_switch"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/animation_user_defined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_anim_user_defined"
        android:textAllCaps="false"/>

</LinearLayout>
